feat: ui overhaul + taxonomy + internal api hardening